docs(swagger): api doc for endpoint create article
